--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/luwes/super-media-element/issues"
   },
   "scripts": {
+    "lint": "eslint *.js",
     "pretest": "esbuild super-media-element.js --format=iife --outdir=dist",
     "test": "web-test-runner --config test/web-test-runner.config.js",
     "dev": "npx serve ."
@@ -24,15 +25,10 @@
     "@open-wc/testing": "^3.1.7",
     "@web/test-runner": "^0.15.0",
     "esbuild": "^0.17.3",
-    "eslint": "^8.32.0",
-    "prettier": "^2.8.3"
-  },
-  "prettier": {
-    "tabWidth": 2,
-    "singleQuote": true,
-    "semi": true
+    "eslint": "^8.32.0"
   },
   "eslintConfig": {
+    "root": true,
     "globals": {
       "globalThis": "writable"
     },
