--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "env": {
       "browser": true,
       "es6": true,
-      "node": true,
-      "mocha": true
+      "node": true
     },
     "extends": [
       "eslint:recommended"
