--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   },
   "scripts": {
     "lint": "npx eslint *.js",
-    "pretest": "esbuild super-media-element.js --format=iife --outdir=dist",
+    "pretest": "esbuild test/test.js --bundle --format=iife --outdir=dist",
     "test": "wet run test/lazy.html test/eager.html",
     "dev": "wet serve --cors --redirect :example/"
   },
   "devDependencies": {
     "esbuild": "^0.17.3",
-    "wet-run": "^0.0.8"
+    "wet-run": "^0.0.8",
+    "zora": "^5.2.0"
   },
   "eslintConfig": {
     "root": true,
